# work_journal

./: README.md  alembic.ini  pyproject.toml  work_journal.py  work_journal.spec
alembic/: env.py
alembic/versions/: e535a77e6718_initial_state.py
design/: Work Journal.bmpr  database.md  presentation_outline.md  project_plan.md
tests/: test_config_repo.py  test_db.py  test_journal_repo.py
work_journal/core/: app_config.py
work_journal/core/db/: __init__.py  config_repo.py  db_manager.py  entities.py  journal_repo.py
work_journal/ui/: main_window.py  reports_window.py
